[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rymi"
version = "1.2.0"
description = "The official Python REST API wrapper for Rymi."
readme = "README.md"
authors = [
    { name = "Rymi AI", email = "engineering@rymi.live" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://rymi.live"
Documentation = "https://docs.rymi.live/api/sdk-python"
Source = "https://github.com/rymi-live/rymi-python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0"
]
